# nomaren

./: .gitignore  CMakeLists.txt  README.md  nomaren.md
assets/: nomaren.rc
scripts/: build.bat  build.sh  build_and_run.bat  clean.bat  clean.sh  install.sh
src/: CMakeLists.txt  main.cpp  mainCLI.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  nomaren.cpp  nomaren.hpp  nomaren.ui  ui_mainwindow.h  ui_nomaren.h
